@@ -10,23 +10,36 @@ import java.util.List;
 public class CheckFile {
     private static ChessBoard chessBoard = new ChessBoard();
 
-    public static void Run() throws IOException {
-        checkExistence("c:/temp/temp.txt");
+    /*public static void Run() throws IOException {
+        checkExistence("c:/temp/new-chess-game.txt");
     }
 
 
     public static void checkExistence(String filePath) throws IOException {
         Path path = Paths.get(filePath);
 
+
         if (Files.exists(path)) {
-            System.out.println("Ye");
+            System.out.println("birds singing");
+
         }
 
-        if (Files.notExists(path)) {
-            System.out.println("No");
+        else {
+            System.out.println("No file");
             List<String> lines = Arrays.asList("The first line", "The second line");
-            Path file = Paths.get("new-chess-game.txt");
+            new AppWindow().println("Enter the name of your board: ", false);
+            boolean isAnswered = false;
+            Path file;
+            do {
+
+                file = Path.of(new AppWindow().getInput()+".txt");
+                if (file.getFileName().equals("")){
+                    isAnswered=true;
+                }
+            }while (isAnswered);
+
             Files.write(file, lines, StandardCharsets.UTF_8);
+
             new AppWindow().println("File made",false);
         }
     }
@@ -34,10 +47,12 @@ public class CheckFile {
     public static void loadBoard(){
         String fileName = promptForString("Enter the name of your saved board: ", false);
         try{
-            FileInputStream fileInputStream = new FileInputStream(fileName + ".ser");
+            FileInputStream fileInputStream = new FileInputStream(fileName + ".txt");
             ObjectInputStream objectInputStream = new ObjectInputStream(fileInputStream);
 
             chessBoard = (ChessBoard) objectInputStream.readObject();
+            objectInputStream.close();
+            fileInputStream.close();
         } catch (ClassNotFoundException cnfe){
             cnfe.printStackTrace();
         } catch (IOException ioe){
@@ -45,10 +60,14 @@ public class CheckFile {
         }
     }
     public static void saveBoard(){
-        String fileName = promptForString("Enter a name to save your board under: ", false);
+        String fileName = "Enter a name to save your board under: ";
+
         try{
             FileOutputStream fileOutputStream = new FileOutputStream(fileName + ".ser");
             ObjectOutputStream objectOutputStream = new ObjectOutputStream(fileOutputStream);
+
+
+
         }catch (IOException ioe) {
             ioe.printStackTrace();
         }
@@ -59,7 +78,7 @@ public class CheckFile {
                 chessBoard = new ChessBoard();
             }
         }
-    }
+    }*/
 
     public static String promptForString(String prompt, boolean allowBlank) {
         if (prompt == null || prompt.isBlank()) {
